<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/inputNum1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputNum1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="First number"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/inputNum2"
        app:layout_constraintTop_toBottomOf="@+id/greeting"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintWidth_percent="0.45"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/inputNum2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Second number"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/inputNum1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/inputNum1"
        app:layout_constraintWidth_percent="0.45"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="+"
        app:layout_constraintWidth_percent="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSubtract"
        app:layout_constraintTop_toBottomOf="@+id/inputNum1"
        app:layout_constraintBottom_toTopOf="@+id/resultText"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonSubtract"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="-"
        app:layout_constraintWidth_percent="0.22"
        app:layout_constraintStart_toEndOf="@+id/buttonAdd"
        app:layout_constraintEnd_toStartOf="@+id/buttonMultiply"
        app:layout_constraintTop_toTopOf="@+id/buttonAdd" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="×"
        app:layout_constraintWidth_percent="0.22"
        app:layout_constraintStart_toEndOf="@+id/buttonSubtract"
        app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
        app:layout_constraintTop_toTopOf="@+id/buttonAdd" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="÷"
        app:layout_constraintWidth_percent="0.22"
        app:layout_constraintStart_toEndOf="@+id/buttonMultiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonAdd" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="Result: "
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdd" />

</androidx.constraintlayout.widget.ConstraintLayout>
